@@ -160,7 +160,9 @@ TermGenerator::Internal::index_text(Utf8Iterator itor, termcount wdf_inc,
 	}
 
 	while (true) {
-	    if (cjk_ngram && CJK::codepoint_is_cjk(*itor)) {
+	    if (cjk_ngram &&
+		CJK::codepoint_is_cjk(*itor) &&
+		Unicode::is_wordchar(*itor)) {
 		const string & cjk = CJK::get_cjk(itor);
 		for (CJKTokenIterator tk(cjk); tk != CJKTokenIterator(); ++tk) {
 		    const string & cjk_token = *tk;
@@ -215,6 +217,7 @@ TermGenerator::Internal::index_text(Utf8Iterator itor, termcount wdf_inc,
 		    if (ch) break;
 		    ++itor;
 		}
+		continue;
 	    }
 	    unsigned prevch;
 	    do {
